[package]
name = "cities"
version = "0.1.0"
people = ["Kirill Konevets <kkonevets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.6.1"
itertools = "0.9.0"
crossbeam = "0.6.0"
num_cpus = "1.13.0"
bit-set = "0.5.1"
# num-iter = "0.1.40"
num = "0.2.1"
byteorder = "1.2.6"
csv = "1.1"
thousands = "0.1.2"
rand = "^0.7"
rustc-hash = "1.1.0"
rayon = "1.3.0"
indicatif = "0.13.0"
lmdb-rkv = "0.14.0"
actix-web = "1.0.9"
actix-http = "0.2.4"
serde = {version="^1.0",features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
amiquip = "0.3"
# ccmg-events = { path = "../ccmg-events-rs" }
chrono = { version = "^0.4", features = ["serde", "clock"] }
reqwest = "0.9.22"
futures = "0.1.23"
tokio = "0.2.2"
log = "0.4.0"
env_logger = "0.7.1"
# hyper = "0.12.35"
# lmdb-zero = "0.4.4"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"

[lib]
name = "cities"
crate-type = ["rlib", "cdylib"]

